refactor 统一术语应用标识

--- a/doc/错误码.MD
+++ b/doc/错误码.MD
@@ -4,7 +4,7 @@
 - 主要用于记录导致系统异常的非本系统能处理的的异常问题（非参数校验、非预见的流程异常，如网路错误，文件系统错误等不可抗拒的因素导致的）
 
 ## 推荐格式？
-推荐分段使用，如前几位标识一个系统/服务，中间一段标识模块，后一段标识业务...
+推荐分段使用，如前几位标识一个应用，中间一段标识模块，后一段标识业务...
 16进制整数，如 0x123456
 10进制整数，如 15612315464642
 有意义的字符串 userNotFound
