add baseAppInfo refactor errorCode

--- a/doc/错误码.MD
+++ b/doc/错误码.MD
@@ -27,7 +27,7 @@
 引入 
 ```xml
         <plugin>
-            <groupId>org.shoulder.plugins</groupId>
+            <groupId>cn.itlym.plugins</groupId>
             <artifactId>errcode-maven-plugin</artifactId>
         </plugin>
 ```
