feat(archetype) 补充 maven archetype 单模块

--- a/shoulder-archetype-simple/src/main/resources/archetype-resources/src/main/resources/language/zh_CN/messages.properties
+++ b/shoulder-archetype-simple/src/main/resources/archetype-resources/src/main/resources/language/zh_CN/messages.properties
@@ -1,6 +1,3 @@
-#set( $symbol_pound = '#' )
-#set( $symbol_dollar = '$' )
-#set( $symbol_escape = '\' )
-shoulder.test.hi=${symbol_escape}u55E8
-shoulder.test.hello=${symbol_escape}u4F60${symbol_escape}u597D,{0}
-shoulder.test.cnSpecial=${symbol_escape}u53EA${symbol_escape}u6709${symbol_escape}u4E2D${symbol_escape}u6587${symbol_escape}u7684${symbol_escape}u8D44${symbol_escape}u6E90${symbol_escape}u5305${symbol_escape}u4E2D${symbol_escape}u6709${symbol_escape}u8FD9${symbol_escape}u53E5${symbol_escape}u8BDD
+shoulder.test.hi=\u55E8
+shoulder.test.hello=\u4F60\u597D,{0}
+shoulder.test.cnSpecial=\u53EA\u6709\u4E2D\u6587\u7684\u8D44\u6E90\u5305\u4E2D\u6709\u8FD9\u53E5\u8BDD
