--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -1,20 +1,7 @@
 = 更新记录
 
-== 1.0（规划中）
+== 后续规划
 
-* api-doc
-** 提供开箱即用的接口说明
-* web
-** cors 一键开关
-** 现在会自动引入 shoulder-api-doc
-** 提供操作日志查询
-** 配置开启发送邮件，支持模板
-* crypto
-** 支持关闭公钥查询接口
-** 支持修改公钥查询接口地址
-* operation-log
-** OpLogContextHolder 方法名调整 closeAutoLog -> disableAutoLog
-** 可通过配置 logger.type=none 关闭日志打印，但保留操作日志其他功能。
 * ext-ai
 ** 提供AI 工程里额外能力，如意图识别，输出内容管控、会话历史、会话分析等
 * ext-config
@@ -22,6 +9,49 @@
 * ext-moments
 ** 提供社交功能模块
 ** 动态、文章、评论、点赞、朋友圈、通知等
+
+== 1.0（规划中）
+
+=== 🐞 BugFix 问题修复
+
+* 修复操作日志中，在引入 `Hutool` 并使用 `userAgent` 时，操作日志的扩展字段的 `UserAgent` 内容未打印完全问题。
+* 修复 `DefaultTenantFilter` 默认租户名带引号问题。
+
+=== 🛠️ Refactor 优化
+
+* Core
+** 优化日期类型转换性能，增加更多支持格式。
+
+* WEB 模块
+** 提供操作日志查询
+
+* crypto
+** 支持配置关闭公钥查询接口、修改接口地址
+** 传输加解密（密钥协商）配置格式优化，支持配置可协商的加密算法
+
+* operation-log
+** OpLogContextHolder 方法名调整 closeAutoLog -> disableAutoLog
+** 可通过配置 logger.type=none 关闭日志打印，但保留操作日志其他功能。
+
+* batch
+** 调整 record 默认字段名 `index` -> `indexNo`
+
+* api-doc
+** 提供开箱即用的接口说明
+
+* 其他
+** 对关键模块（Core、Crypto、Negotiation）单测覆盖。
+** 补充源码注释、降低 warn。
+** 调整部分功能默认实现类命名，`HashMapXXX` -> `MemoryXXX`
+
+❌ Compatibility 非兼容变化
+
+[NOTE]
+====
+* 密钥协商相关配置前缀变化 `shoulder.crypto.transport` -> `shoulder.crypto.negotiation`
+====
+
+=== 📚️ Dependence 依赖变化
 
 == 0.8.1（2024-6-17）
 
