--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -5,22 +5,23 @@
 * Core
 
 ** Threads 工具类增加线程名，启动、完成/异常日志、摘要日志打印
+** Threads 添加回调功能，除了支持统计数据外，还允许回调时 cancel / interrupt 提交的任务
 ** 鲁棒性优化：【兼容性】字典 getEnumItemIdClass 改名 resolveEnumClass，避免序列化问题
 
 * operation-log
 ** 功能增强【兼容性】OperationLoggerInterceptor 支持返回 false 不记录日志
-** 优化 disableAutoLog 执行时间，不再强制检查上下文
+** 优化 isEnableAutoLog disableAutoLog 执行时间，不再强制检查上下文
 
 * Batch
-** 鲁棒性优化【兼容性】：Progress#getBatchProgress 改为 toBatchProgressRecord，避免部分框架反序列化问题
+** 鲁棒性优化【兼容性】：Progress#getBatchProgress 改为 toProgressRecord，避免部分框架反序列化问题
 ** 功能增强：DefaultCache 增加字段 flushDuration，默认 2s，而非只能是2s。
 ** 功能增强【兼容性】triggerFlushProgress 如果本地缓存（包括可能代理），则直接放引用，注意 getProgress 时，不再只返回 BatchProgressRecord 类了
 ** 鲁棒性优化：batchProgress.start CAS 设置 startTime，支持幂等，成功返回 true，未修改返回 false
 ** BatchProgress 预估剩余时间、完成状态不一致，checkFinished 加 boolean 入参，检查的时候true，其他时候传 autoFished，设置为 public
 ** 使用简化：如果只调用 finish，没调用 start，无法计算剩余耗时，可多判断 if xx || startTime == null
-** doc: autoFinished 加注释，如果总量会变化，建议设置为 false
 ** 鲁棒性优化：batchProgress 完成了（没调用 start、没调用 setTotal，也就是 0 任务情况下）直接调用 finished 会导致 startTime 为空，从而计算剩余时间时失败
 ** BUGFIX: FixedNumProgress.checkFinished 方法修复
+** doc: autoFinished 加注释，如果总量会变化，建议设置为 false
 ** AI 友好：BatchProcessResult 新增 statusInfo 增强接口可读性
 
 == 1.0（2025-1-26）
