--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -6,6 +6,7 @@
 
 ** Spring Boot （3.2 -> 3.3）小版本升级，部分依赖稳定性小版本升级
 *** jna: 5.17.0、hutool 5.8.39、guava:33.4.8-jre、bcprov:1.81、caffeine:3.1.8、tika:2.9.4、opencsv:5.9、lombok:1.18.38、druid:1.2.23、redisson:3.45.1
+*** javax -> jakarta
 
 * Core
 
@@ -13,6 +14,7 @@
 ** 优化: AddressUtils 选择ip结果更准、更稳定
 ** 功能: 支持异步线程若缺少 traceId 将自动设置，并新增 relatedTraceId，允许关联异步任务trace、触发trace
 ** 优化: PeriodicTask 支持使用异步线程池
+** 【TODO 开发中】优化: Enhanceable 新支持增强 支持 ScheduledExecutorService、ScheduledThreadPoolExecutor、ThreadPoolTaskExecutor、ThreadPoolTaskScheduler
 ** 优化: Threads execute、delay、schedule、executeAndWait 方法支持指定线程池运行
 ** 优化: 支持配置缓存key 分隔符（`shoulder.application.cacheKeySplit`）
 ** 优化: EmbeddedRedis 支持配置启动，默认不启动
@@ -22,9 +24,12 @@
 ** 功能: 升级 RedisInstanceIdProvider 提供企业级 instantId 分配策略（支持 redis 集群、增加权限、更精准的报错提示和排查指南等）。
 
 * 其他
-** 优化: 部分配置项添加提示：
+** 优化: 部分配置项添加提示
 *** `shoulder.redis.key-prefix` 默认以 `appId:` 开头，
 *** `shoulder.db.sequence.table-name` 配置添加开关，默认 `tb_sequence`
+*** `shoulder.application.xx` 重构
+*** `shoulder.concurrent.enhance` 支持关闭全局线程增强
+** 优化: BaseService#lockById/lockByBiz 新增入参校验，让报错提前止请求数据库前
 
 == 1.1.1 （2025-05-30）
 
