--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -15,7 +15,7 @@ TODO 检查 key 需要手动分片的（一个功能依赖多个 key）
 
 * Core
 
-** ⚠️ 优化: TODO 继续完善 Threads execute、delay、schedule，executeAndWait 方法支持指定线程池运行
+** ⚠️ 优化: Threads execute、delay、schedule，executeAndWait 方法支持指定线程池运行
 ** 优化 移除 NotifyOnFinish.Runnable/Callable（使用 JDK.CompletableFuture）
 ** 功能: 支持异步线程若缺少 traceId 将自动设置（一次性异步任务默认继承调用处 trace、周期性任务默认新建trace），并新增 relatedTraceId，允许关联异步任务trace、触发trace
 ** 优化: PeriodicTask 支持使用异步线程池 TODO CHECK
